remove legal file
git-svn-id: file:///srv/svn/publican/trunk@339 322d0b13-9966-4b26-b068-8724d74359d3

--- a/publican-jboss/bn-IN/Code-Conventions.po
+++ b/publican-jboss/bn-IN/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-11-05 16:25+0530\n"
 "Last-Translator: Runa Bhattacharjee <runab@redhat.com>\n"
 "Language-Team: Bengali INDIA\n"
@@ -13,35 +14,50 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "কোড উপস্থাপনা সংক্রান্ত নিয়ম নীতি"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
 msgstr ""
-"<xref linkend="
-"\"sn-conventions\"/>-এ উল্লিখিত ডকুমেন্টে ব্যবহৃত নিয়ম নীতি ভিন্ন এই সহায়িকার মধ্যে সোর্স কোড উল্লেখ করার জন্য কিছু অতিরিক্ত নীতি পালিত হয়েছে:"
+"<xref linkend=\"sn-conventions\"/>-এ উল্লিখিত ডকুমেন্টে ব্যবহৃত নিয়ম নীতি ভিন্ন এই "
+"সহায়িকার মধ্যে সোর্স কোড উল্লেখ করার জন্য কিছু অতিরিক্ত নীতি পালিত হয়েছে:"
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "ক্লাসের নাম"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
-msgstr "অবজেক্ট-ওরিয়েন্টেড (<firstterm>OO</firstterm>) প্রোগ্রামিং ভাষায় ব্যবহৃত ক্লাসের নাম। উদাহরণস্বরূপ, ক্লাস <classname>com.arsdigita.categorization.CategoryTreeNode</classname>।"
+msgstr ""
+"অবজেক্ট-ওরিয়েন্টেড (<firstterm>OO</firstterm>) প্রোগ্রামিং ভাষায় ব্যবহৃত ক্লাসের "
+"নাম। উদাহরণস্বরূপ, ক্লাস <classname>com.arsdigita.categorization."
+"CategoryTreeNode</classname>।"
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "মেথডের নাম"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
@@ -49,21 +65,31 @@ msgstr ""
 "OO প্রোগ্রামিং ভাষায় ব্যবহৃত মেথডের নাম, যেমন, মেথড "
 "<methodname>getBaseDataObjectType</methodname>।"
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "ফাংশান"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
-msgstr "প্রোগ্রামিং ভাষায় উপস্থিত ফাংশান অথবা সাব-রুটিনের নাম। উদাহরণ, ফাংশান <function>SecurityLogger.warn()</function> ।"
+msgstr ""
+"প্রোগ্রামিং ভাষায় উপস্থিত ফাংশান অথবা সাব-রুটিনের নাম। উদাহরণ, ফাংশান "
+"<function>SecurityLogger.warn()</function> ।"
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "ভেরিয়েবলের নাম"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
@@ -71,50 +97,94 @@ msgstr ""
 "ভেরিয়েবল অর্থাৎ পরিবর্তনযোগ্য মানের নাম। উদাহরণ, ভেরিয়েবল "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ।"
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "বিকল্প"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
-msgstr "সফ্টওয়্যার কমান্ড অথবা <methodname>মেথড</methodname>-এ ব্যবহারযোগ্য বিকল্প। উদাহরণ, ব্যবহারকারীকে চিহ্নিত বস্তু <option>পাঠ</option> করার অনুমতি প্রদান করা হয়েছে।"
+msgstr ""
+"সফ্টওয়্যার কমান্ড অথবা <methodname>মেথড</methodname>-এ ব্যবহারযোগ্য বিকল্প। "
+"উদাহরণ, ব্যবহারকারীকে চিহ্নিত বস্তু <option>পাঠ</option> করার অনুমতি প্রদান করা "
+"হয়েছে।"
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "প্রাপ্ত মান"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
 msgstr ""
-"ফাংশান সঞ্চালনের পরে প্রাপ্ত মান। উদাহরণ, মেথড থেকে "
-"<returnvalue>null</returnvalue> মান প্রাপ্ত হয়েছে।"
+"ফাংশান সঞ্চালনের পরে প্রাপ্ত মান। উদাহরণ, মেথড থেকে <returnvalue>null</"
+"returnvalue> মান প্রাপ্ত হয়েছে।"
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "প্রোগ্রাম তালিকা"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "প্রোগ্রামের সম্পূর্ণ অথবা আংশিক তালিকা:"
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "প্রথম অভিব্যক্তি"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
-msgstr "কোনো অভিব্যক্তির প্রথম উদ্ধৃতি যেমন, প্রথম বার <firstterm>bulletin-board</firstterm>-র উল্লেখ এবং এর সংক্ষিপ্ত রূপ, <firstterm>bboard</firstterm>।"
+msgstr ""
+"কোনো অভিব্যক্তির প্রথম উদ্ধৃতি যেমন, প্রথম বার <firstterm>bulletin-board</"
+"firstterm>-র উল্লেখ এবং এর সংক্ষিপ্ত রূপ, <firstterm>bboard</firstterm>।"
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "রুণা ভট্টাচার্য্য <runab@redhat.com> ২০০৭"
-
+#~ msgid "translator-credits"
+#~ msgstr "রুণা ভট্টাচার্য্য <runab@redhat.com> ২০০৭"
