--- a/publican-jboss/gu-IN/Translatable-Entities.po
+++ b/publican-jboss/gu-IN/Translatable-Entities.po
@@ -3,6 +3,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Translatable-Entities\n"
+"POT-Creation-Date: 2008-07-04 16:19+1000\n"
 "PO-Revision-Date: 2007-10-29 13:25+0530\n"
 "Last-Translator: Ankit Patel <ankit@redhat.com>\n"
 "Language-Team: Gujarati <fedora-trans-gu@redhat.com>\n"
@@ -10,7 +11,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms:  nplurals=2; plural=(n!=1);\n\n"
+"Plural-Forms:  nplurals=2; plural=(n!=1);\n"
+"\n"
 "\n"
 "\n"
 "\n"
@@ -788,4 +790,3 @@ msgstr "વપરાશકર્તાનું માર્ગદર્શન"
 #, no-c-format
 msgid "UNIX Support"
 msgstr "UNIX આધાર"
-
