--- a/publican-jboss/hi-IN/Translatable-Entities.po
+++ b/publican-jboss/hi-IN/Translatable-Entities.po
@@ -4,6 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Translatable-Entities\n"
+"POT-Creation-Date: 2008-07-04 16:19+1000\n"
 "PO-Revision-Date: 2007-10-30 13:09+0530\n"
 "Last-Translator: Rajesh Ranjan <rranjan@redhat.com>\n"
 "Language-Team: Hindi <hindi.sf.net>\n"
@@ -11,7 +12,9 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n\n\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
+"\n"
 "\n"
 "\n"
 "\n"
@@ -789,4 +792,3 @@ msgstr "उपयोक्ता गाइड"
 #, no-c-format
 msgid "UNIX Support"
 msgstr "UNIX समर्थन"
-
