--- a/publican-jboss/ko-KR/Code-Conventions.po
+++ b/publican-jboss/ko-KR/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-23 15:42+1000\n"
 "Last-Translator: Eunju Kim <eukim@redhat.com>\n"
 "Language-Team: Korean <ko@li.org>\n"
@@ -12,102 +13,175 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "코드화 규정 "
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
-msgstr "<xref linkend=\"sn-conventions\"/>에서 다루어진 기본적인 문서화 규정에 더하여, 소스 코드와 관련된 추가 규정이 있습니다:"
+msgstr ""
+"<xref linkend=\"sn-conventions\"/>에서 다루어진 기본적인 문서화 규정에 더하"
+"여, 소스 코드와 관련된 추가 규정이 있습니다:"
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "클래스 이름 "
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
-msgstr "객체 지향 (<firstterm>OO</firstterm>) 프로그래밍 언어에서의 클래스 이름을 말합니다. 예: <classname>com.arsdigita.categorization.CategoryTreeNode</classname> 클래스 "
+msgstr ""
+"객체 지향 (<firstterm>OO</firstterm>) 프로그래밍 언어에서의 클래스 이름을 말"
+"합니다. 예: <classname>com.arsdigita.categorization.CategoryTreeNode</"
+"classname> 클래스 "
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "메소드 이름 "
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
-msgstr "OO 프로그래밍 언어에서의 메소드 이름을 말합니다. 예: <methodname>getBaseDataObjectType</methodname> 메소드 "
+msgstr ""
+"OO 프로그래밍 언어에서의 메소드 이름을 말합니다. 예: "
+"<methodname>getBaseDataObjectType</methodname> 메소드 "
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "함수 "
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
-msgstr "프로그래밍 언어에서 함수 또는 서브루틴을 말합니다. 예: <function>SecurityLogger.warn()</function> 함수 "
+msgstr ""
+"프로그래밍 언어에서 함수 또는 서브루틴을 말합니다. 예: "
+"<function>SecurityLogger.warn()</function> 함수 "
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "변수 이름 "
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
-msgstr "변수의 이름을 말합니다. 예: <varname>BASE_DATA_OBJECT_TYPE</varname> 변수 "
+msgstr ""
+"변수의 이름을 말합니다. 예: <varname>BASE_DATA_OBJECT_TYPE</varname> 변수 "
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "옵션 "
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
-msgstr "소프트웨어 명령이나 <methodname>메소드</methodname>의 옵션을 말합니다. 예: 사용자에게 어떤 객체에서 <option>읽기</option> 권한이 부여되었습니다. "
+msgstr ""
+"소프트웨어 명령이나 <methodname>메소드</methodname>의 옵션을 말합니다. 예: 사"
+"용자에게 어떤 객체에서 <option>읽기</option> 권한이 부여되었습니다. "
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "반환값 "
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
-msgstr "함수에 의한 반환값을 말합니다. 예: 메소드는 <returnvalue>null</returnvalue>을 반환합니다. "
+msgstr ""
+"함수에 의한 반환값을 말합니다. 예: 메소드는 <returnvalue>null</returnvalue>"
+"을 반환합니다. "
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "프로그램 목록 "
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "모든 또는 부분적인 프로그램 목록을 말합니다: "
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "처음으로 사용된 용어 "
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
 msgstr ""
-"처음으로 사용된 용어를 말합니다. 즉, 처음으로 <firstterm>bulletin-board</firstterm>가 소개되었다면 축약형은 "
-"<firstterm>bboard</firstterm>가 됩니다. "
+"처음으로 사용된 용어를 말합니다. 즉, 처음으로 <firstterm>bulletin-board</"
+"firstterm>가 소개되었다면 축약형은 <firstterm>bboard</firstterm>가 됩니다. "
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "김은주 (eukim@redhat.com), 2006, 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "김은주 (eukim@redhat.com), 2006, 2007"
