--- a/publican-jboss/mr-IN/Translatable-Entities.po
+++ b/publican-jboss/mr-IN/Translatable-Entities.po
@@ -4,6 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Translatable-Entities\n"
+"POT-Creation-Date: 2008-07-04 16:19+1000\n"
 "PO-Revision-Date: 2007-10-29 19:16+0530\n"
 "Last-Translator: sandeep shedmake <sandeep.shedmake@gmail.com>\n"
 "Language-Team: marathi\n"
@@ -11,7 +12,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
 "\n"
 
 #. ADS
@@ -787,4 +789,3 @@ msgstr "वापरकर्त्याची पुस्तिका"
 #, no-c-format
 msgid "UNIX Support"
 msgstr "UNIX समर्थन"
-
