--- a/publican-jboss/or-IN/Translatable-Entities.po
+++ b/publican-jboss/or-IN/Translatable-Entities.po
@@ -4,6 +4,7 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Translatable-Entities\n"
+"POT-Creation-Date: 2008-07-04 16:19+1000\n"
 "PO-Revision-Date: 2007-11-05 19:28+0530\n"
 "Last-Translator: Subhransu Behera <arya_subhransu@yahoo.co.in>\n"
 "Language-Team: Oriya <oriya-group@lists.sarovar.org>\n"
@@ -11,7 +12,8 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n\n"
+"Plural-Forms: Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
 "\n"
 "\n"
 
@@ -788,4 +790,3 @@ msgstr "ଚାଳକ ଗାଇଡ"
 #, no-c-format
 msgid "UNIX Support"
 msgstr "UNIX ସହାୟତା"
-
