--- a/publican-jboss/ta-IN/Code-Conventions.po
+++ b/publican-jboss/ta-IN/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-29 15:21+0530\n"
 "Last-Translator: I. Felix <ifelix@redhat.com>\n"
 "Language-Team: Tamil <fedora-trans-ta@redhat.com>\n"
@@ -11,37 +12,56 @@ msgstr ""
 "Content-Type: text/plain; charset=UTF-8\n"
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
-"Plural-Forms: nplurals=2; plural=(n!=1);\n\n\n"
+"Plural-Forms: nplurals=2; plural=(n!=1);\n"
+"\n"
+"\n"
 "\n"
 "\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "குறியீனு காட்சி பெயரிடல்"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
-msgstr "மேலும் தரப்படுத்தப்பட்ட ஆவண பெயரிடல் <xref linkend=\"sn-conventions\"/>இல் உள்ளடக்கியிருக்கும், சில கூடுதல் பெயரிடல் மூலக்குறியீட்டை குறிப்பாக விவாதிக்கிறது:"
+msgstr ""
+"மேலும் தரப்படுத்தப்பட்ட ஆவண பெயரிடல் <xref linkend=\"sn-conventions\"/>இல் "
+"உள்ளடக்கியிருக்கும், சில கூடுதல் பெயரிடல் மூலக்குறியீட்டை குறிப்பாக விவாதிக்கிறது:"
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "வகுப்பு பெயர்"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
-msgstr "ஒரு object-oriented (<firstterm>OO</firstterm>) நிரலாக்க மொழியில் ஒரு வகுப்பின் பெயர். எடுத்துக்காட்டாக, <classname>com.arsdigita.categorization.CategoryTreeNode</classname> வகுப்பு."
+msgstr ""
+"ஒரு object-oriented (<firstterm>OO</firstterm>) நிரலாக்க மொழியில் ஒரு வகுப்பின் "
+"பெயர். எடுத்துக்காட்டாக, <classname>com.arsdigita.categorization."
+"CategoryTreeNode</classname> வகுப்பு."
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "முறை பெயர்"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
@@ -49,72 +69,126 @@ msgstr ""
 "ஒரு OO நிரலாக்க மொழியில் ஒரு முறையின் பெயர், எடுத்துக்காட்டாக,"
 "<methodname>getBaseDataObjectType</methodname> முறை."
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "செயல்பாடு"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
-msgstr "ஒரு நிரலாக்க மொழியில் ஒரு செயல்பாட்டின் பெயராகும். எடுத்துக்காட்டாக, செயல்பாடு <function>SecurityLogger.warn()</function> ."
+msgstr ""
+"ஒரு நிரலாக்க மொழியில் ஒரு செயல்பாட்டின் பெயராகும். எடுத்துக்காட்டாக, செயல்பாடு "
+"<function>SecurityLogger.warn()</function> ."
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "மாறி பெயர்"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
 msgstr ""
-"மாறியின் பெயர். எடுத்துக்காட்டாக, மாறி "
-"<varname>BASE_DATA_OBJECT_TYPE</varname> ."
+"மாறியின் பெயர். எடுத்துக்காட்டாக, மாறி <varname>BASE_DATA_OBJECT_TYPE</varname> ."
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "விருப்பம்"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
-msgstr "ஒரு மென்பொருள் கட்டளை அல்லது <methodname>Method</methodname> க்கான விருப்பமாகும். எடுத்துக்காட்டாக, ஒரு பயனருக்கும் ஒரு பொருளில் <option>வாசிப்பு</option> முன்னுரிமை வழங்கப்பட்டுள்ளது."
+msgstr ""
+"ஒரு மென்பொருள் கட்டளை அல்லது <methodname>Method</methodname> க்கான விருப்பமாகும். "
+"எடுத்துக்காட்டாக, ஒரு பயனருக்கும் ஒரு பொருளில் <option>வாசிப்பு</option> முன்னுரிமை "
+"வழங்கப்பட்டுள்ளது."
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "கொடுக்கும் மதிப்பு"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
 msgstr ""
-"ஒரு செயல்பாட்டால் கொடுக்கப்பட்ட மதிப்பு. எடுத்துக்காட்டாக, ஒரு முறை கொடுக்கும் மதிப்பு"
-"<returnvalue>null</returnvalue> ."
+"ஒரு செயல்பாட்டால் கொடுக்கப்பட்ட மதிப்பு. எடுத்துக்காட்டாக, ஒரு முறை கொடுக்கும் "
+"மதிப்பு<returnvalue>null</returnvalue> ."
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "நிரல் பட்டியலிடல்"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "ஒரு நிரலின் அனைத்து அல்லது பகுதி பட்டியல்:"
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "முதல் சொல்"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
-msgstr "முதல் முறை தோன்றும் ஒரு சொல், அதாவது முதல் முறை நாம் அறிமுகப்படுத்தும் <firstterm>bulletin-board</firstterm>இல் அதன் சுருக்க வடிவம் <firstterm>bboard</firstterm> ஆகும்."
+msgstr ""
+"முதல் முறை தோன்றும் ஒரு சொல், அதாவது முதல் முறை நாம் அறிமுகப்படுத்தும் "
+"<firstterm>bulletin-board</firstterm>இல் அதன் சுருக்க வடிவம் <firstterm>bboard</"
+"firstterm> ஆகும்."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "I. Felix <ifelix@redhat.com> 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "I. Felix <ifelix@redhat.com> 2007"
