--- a/publican-jboss/as-IN/Code-Conventions.po
+++ b/publican-jboss/as-IN/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-30 15:18+0530\n"
 "Last-Translator: \n"
 "Language-Team:  <en@li.org>\n"
@@ -13,104 +14,173 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n!=1)\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "কোড প্ৰদৰ্শনৰ আচাৰ বিধি"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
-msgstr "<xref linkend=\"sn-conventions\"/> ত থকা মানপ্ৰাপ্ত আলেখ্যনৰ আচাৰ বিধিৰ উপৰিও, কিছুমান অতিৰিক্ত আচাৰ বিধি  আছে যি উৎসৰ কোডৰ সম্বন্ধীয় আলোচনাত প্ৰয়োগ হয়:"
+msgstr ""
+"<xref linkend=\"sn-conventions\"/> ত থকা মানপ্ৰাপ্ত আলেখ্যনৰ আচাৰ বিধিৰ উপৰিও, "
+"কিছুমান অতিৰিক্ত আচাৰ বিধি  আছে যি উৎসৰ কোডৰ সম্বন্ধীয় আলোচনাত প্ৰয়োগ হয়:"
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "classname"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
 msgstr ""
-"এইটো এটা শ্ৰেণীৰ নাম object-oriented (<firstterm>OO</firstterm>) প্ৰ'গৰামিং ভাষাত । যেনে, <classname>com."
-"arsdigita.categorization.CategoryTreeNode</classname> শ্ৰেণী ।"
+"এইটো এটা শ্ৰেণীৰ নাম object-oriented (<firstterm>OO</firstterm>) প্ৰ'গৰামিং "
+"ভাষাত । যেনে, <classname>com.arsdigita.categorization.CategoryTreeNode</"
+"classname> শ্ৰেণী ।"
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "method name"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
-msgstr "এইটো এটা ধৰণৰ নাম এটা OO প্ৰ'গ্ৰামিং ভাষাত, যেনে <methodname>getBaseDataObjectType</methodname> ধৰণ ।"
+msgstr ""
+"এইটো এটা ধৰণৰ নাম এটা OO প্ৰ'গ্ৰামিং ভাষাত, যেনে "
+"<methodname>getBaseDataObjectType</methodname> ধৰণ ।"
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "function"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
-msgstr "কোনো প্ৰ'গ্ৰামিং ভাষাত, এইটো এটা আপেক্ষক বা ছাব্‌ৰুটিন । যেনে, <function>SecurityLogger.warn()</function> আপেক্ষক ।"
+msgstr ""
+"কোনো প্ৰ'গ্ৰামিং ভাষাত, এইটো এটা আপেক্ষক বা ছাব্‌ৰুটিন । যেনে, "
+"<function>SecurityLogger.warn()</function> আপেক্ষক ।"
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "variable name"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
 msgstr "এটা চলকৰ নাম । যেনে, <varname>BASE_DATA_OBJECT_TYPE</varname> চলক ।"
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "option"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
-msgstr "এটা চালনাজ্ঞানৰ আদেশ বা <methodname>ধৰণ</methodname>ৰ বিকল্প । যেনে, এজন ব্যৱহাৰকৰোঁতাক এটা ধৰণত <option>পঢ়া</option>ৰ বিশেষাধিকাৰ দিয়া হৈছে ।"
+msgstr ""
+"এটা চালনাজ্ঞানৰ আদেশ বা <methodname>ধৰণ</methodname>ৰ বিকল্প । যেনে, এজন "
+"ব্যৱহাৰকৰোঁতাক এটা ধৰণত <option>পঢ়া</option>ৰ বিশেষাধিকাৰ দিয়া হৈছে ।"
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "return value"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
-msgstr "এটা আপেক্ষকে ঘূৰুৱা মান । যেনে, এটা ধৰণে <returnvalue>null</returnvalue> ঘূৰাই ।"
+msgstr ""
+"এটা আপেক্ষকে ঘূৰুৱা মান । যেনে, এটা ধৰণে <returnvalue>null</returnvalue> ঘূৰাই ।"
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "program listing"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "এটা অনুপ্ৰয়োগৰ কোনো অংশ বা সকলোৰে আক্ষৰিক তালিকা:"
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "first term"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
 msgstr ""
-"কোনো শব্দৰ প্ৰথম উল্লেখ, যেনে প্ৰথমবাৰৰ বাবে আমি আগবঢ়োৱা এটা <firstterm>bulletin-board</firstterm> আৰু মন কৰিব ইয়াৰ চমু ৰূপ, "
-"<firstterm>bboard</firstterm>."
+"কোনো শব্দৰ প্ৰথম উল্লেখ, যেনে প্ৰথমবাৰৰ বাবে আমি আগবঢ়োৱা এটা <firstterm>bulletin-"
+"board</firstterm> আৰু মন কৰিব ইয়াৰ চমু ৰূপ, <firstterm>bboard</firstterm>."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "অমিতাক্ষ ফুকন <aphukan@redhat.com>"
-
+#~ msgid "translator-credits"
+#~ msgstr "অমিতাক্ষ ফুকন <aphukan@redhat.com>"
