--- a/publican-jboss/es-ES/Code-Conventions.po
+++ b/publican-jboss/es-ES/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-23 14:11+1000\n"
 "Last-Translator: Manuel Ospina <mospina@redhat.com>\n"
 "Language-Team: Español <en@li.org>\n"
@@ -12,100 +13,179 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "Convenciones de presentación de código"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
-msgstr "Además de las convenciones estándar cubiertas en la <xref linkend=\"sn-conventions\"/>, hay otras convenciones adicionales relacionadas con la discusión de código fuente:"
+msgstr ""
+"Además de las convenciones estándar cubiertas en la <xref linkend=\"sn-"
+"conventions\"/>, hay otras convenciones adicionales relacionadas con la "
+"discusión de código fuente:"
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "nombre de clase"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
-msgstr "Este es el nombre de una clase en un lenguage de programación orientado a objetos (<firstterm>OO</firstterm>). Por ejemplo, <classname>com.arsdigita.categorization.CategoryTreeNode</classname> ."
+msgstr ""
+"Este es el nombre de una clase en un lenguage de programación orientado a "
+"objetos (<firstterm>OO</firstterm>). Por ejemplo, <classname>com.arsdigita."
+"categorization.CategoryTreeNode</classname> ."
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "nombre de método"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
-msgstr "Este es el nombre de un método en un lenguaje de programación orientado a objetos. Por ejemplo, <methodname>getBaseDataObjectType</methodname>."
+msgstr ""
+"Este es el nombre de un método en un lenguaje de programación orientado a "
+"objetos. Por ejemplo, <methodname>getBaseDataObjectType</methodname>."
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "función"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
-msgstr "El nombre de una función o subrutina en un lenguaje de programación. Por ejemplo, <function>SecurityLogger.warn()</function>."
+msgstr ""
+"El nombre de una función o subrutina en un lenguaje de programación. Por "
+"ejemplo, <function>SecurityLogger.warn()</function>."
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "nombre de variable"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
-msgstr "El nombre de una variable. Por ejemplo, <varname>BASE_DATA_OBJECT_TYPE</varname>."
+msgstr ""
+"El nombre de una variable. Por ejemplo, <varname>BASE_DATA_OBJECT_TYPE</"
+"varname>."
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "opción"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
-msgstr "Una opción para un comando de software o <methodname>Método</methodname>. Por ejemplo, un usuario que tiene privilegios <option>read</option> en un objeto."
+msgstr ""
+"Una opción para un comando de software o <methodname>Método</methodname>. "
+"Por ejemplo, un usuario que tiene privilegios <option>read</option> en un "
+"objeto."
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "valor de retorno"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
-msgstr "El valor retornado por una función. Por ejemplo un método retorna <returnvalue>null</returnvalue>."
+msgstr ""
+"El valor retornado por una función. Por ejemplo un método retorna "
+"<returnvalue>null</returnvalue>."
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "lista de programa"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "Una lista literal de todo o parte del programa:"
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "primer término"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
-msgstr "La primera vez que un nuevo término aparece. Por ejemplo cuando se introduce <firstterm>bulletin-board</firstterm> y su forma abreviada <firstterm>bboard</firstterm>."
+msgstr ""
+"La primera vez que un nuevo término aparece. Por ejemplo cuando se introduce "
+"<firstterm>bulletin-board</firstterm> y su forma abreviada "
+"<firstterm>bboard</firstterm>."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "Manuel Ospina (mospina@redhat.com) 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "Manuel Ospina (mospina@redhat.com) 2007"
