--- a/publican-jboss/es-ES/Feedback.po
+++ b/publican-jboss/es-ES/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-23 14:10+1000\n"
 "Last-Translator: Manuel Ospina <mospina@redhat.com>\n"
 "Language-Team: Español <en@li.org>\n"
@@ -12,43 +13,63 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "¡Necesitamos sus comentarios!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
 msgstr "comentarios"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "información de contacto para este manual"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
 "submit a report in Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
-msgstr "Si encuentra un error tipográfico en este manual o si sabe de alguna manera de mejorarlo, nos gustaría escuchar sus sugerencias. Por favor complete un reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> usando el producto <application>&PRODUCT;</application>."
+msgstr ""
+"Si encuentra un error tipográfico en este manual o si sabe de alguna manera "
+"de mejorarlo, nos gustaría escuchar sus sugerencias. Por favor complete un "
+"reporte en Bugzilla: <ulink url=\"http://bugzilla.redhat.com/bugzilla/"
+"\">http://bugzilla.redhat.com/bugzilla/</ulink> usando el producto "
+"<application>&PRODUCT;</application>."
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
-msgstr "Cuando envíe un reporte de error no olvide mencionar el identificador del manual: <citetitle>&BOOKID;</citetitle>"
+msgstr ""
+"Cuando envíe un reporte de error no olvide mencionar el identificador del "
+"manual: <citetitle>&BOOKID;</citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
-msgstr "Si tiene una sugerencia para mejorar la documentación, intente ser tan específico como sea posible cuando describa su sugerencia. Si ha encontrado un error, por favor incluya el número de sección y parte del texto que rodea el error para que podamos encontrarlo más fácilmente."
+msgstr ""
+"Si tiene una sugerencia para mejorar la documentación, intente ser tan "
+"específico como sea posible cuando describa su sugerencia. Si ha encontrado "
+"un error, por favor incluya el número de sección y parte del texto que rodea "
+"el error para que podamos encontrarlo más fácilmente."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "Manuel Ospina (mospina@redhat.com) 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "Manuel Ospina (mospina@redhat.com) 2007"
