--- a/publican-jboss/ja-JP/Code-Conventions.po
+++ b/publican-jboss/ja-JP/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-24 11:38+1000\n"
 "Last-Translator: Kiyoto Hashida <khashida@redhat.com>\n"
 "Language-Team: Japanese <jp@li.org>\n"
@@ -12,47 +13,66 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "コード表示の慣習"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
 msgstr ""
-"<xref linkend=\"sn-conventions\"/> に含まれている標準のドキュメント慣習に加えて、 "
-"特にソースコードの説明に関連した追加の慣習があります。"
+"<xref linkend=\"sn-conventions\"/> に含まれている標準のドキュメント慣習に加え"
+"て、 特にソースコードの説明に関連した追加の慣習があります。"
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "クラスの名前"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
 msgstr ""
-"これは、オブジェクト指向（object-oriented）(<firstterm>OO</firstterm>) プログラミング言語内のクラスの "
-"名前です。例えば、クラス <classname>com.arsdigita.categorization.CategoryTreeNode</classname> 。"
+"これは、オブジェクト指向（object-oriented）(<firstterm>OO</firstterm>) プログ"
+"ラミング言語内のクラスの 名前です。例えば、クラス <classname>com.arsdigita."
+"categorization.CategoryTreeNode</classname> 。"
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "メソッドの名前"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
-msgstr "OO プログラミング言語の手段の名前です。例えば、メソッド <methodname>getBaseDataObjectType</methodname> 。"
+msgstr ""
+"OO プログラミング言語の手段の名前です。例えば、メソッド "
+"<methodname>getBaseDataObjectType</methodname> 。"
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "関数"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
@@ -60,62 +80,110 @@ msgstr ""
 "プログラミング言語内で使用される関数、又はサブルーティンの名前です。例えば、 "
 "関数 <function>SecurityLogger.warn()</function> 。"
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "変数の名前"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
-msgstr "変数の名前です。例えば、変数 <varname>BASE_DATA_OBJECT_TYPE</varname> 。"
+msgstr ""
+"変数の名前です。例えば、変数 <varname>BASE_DATA_OBJECT_TYPE</varname> 。"
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "オプション"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
 msgstr ""
-"ソフトウェアコマンド、又は <methodname>メソッド</methodname> の名前です。 "
-"例えば、あるユーザーがオブジェクト上に <option>read</option> の特権を取得したなど。"
+"ソフトウェアコマンド、又は <methodname>メソッド</methodname> の名前です。 例"
+"えば、あるユーザーがオブジェクト上に <option>read</option> の特権を取得したな"
+"ど。"
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "戻り値"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
-msgstr "関数のよって戻された値です。例えば、メソッドは <returnvalue>null</returnvalue> を戻します。"
+msgstr ""
+"関数のよって戻された値です。例えば、メソッドは <returnvalue>null</"
+"returnvalue> を戻します。"
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "プログラム一覧"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "プログラムの全て、又は一部の文字どおりの一覧:"
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "初登場語句"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
 msgstr ""
-"<firstterm>bulletin-board（掲示板）</firstterm> やその省略形の <firstterm>bboard</firstterm> が "
-"初めて紹介された場合など、語句の最初の登場を意味します。"
+"<firstterm>bulletin-board（掲示板）</firstterm> やその省略形の "
+"<firstterm>bboard</firstterm> が 初めて紹介された場合など、語句の最初の登場を"
+"意味します。"
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "kiyoto james hashida, khashida@redhat.com, 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "kiyoto james hashida, khashida@redhat.com, 2007"
