--- a/publican-jboss/ja-JP/Feedback.po
+++ b/publican-jboss/ja-JP/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-24 11:52+1000\n"
 "Last-Translator: Kiyoto Hashida <khashida@redhat.com>\n"
 "Language-Team: Japanese <jp@li.org>\n"
@@ -12,19 +13,27 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "フィードバックをお願いします。"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
 msgstr "フィードバック"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "このドキュメント用の連絡先情報"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
@@ -32,32 +41,34 @@ msgid ""
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"このドキュメント内で誤字/脱字を発見された場合、又はこのドキュメントを改善する案をお持ちの "
-"場合は、弊社までご連絡下さい。該当する製品 <application>&PRODUCT;.</application> に対して "
-"Bugzilla: <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> に報告を提出してください。"
+"このドキュメント内で誤字/脱字を発見された場合、又はこのドキュメントを改善する"
+"案をお持ちの 場合は、弊社までご連絡下さい。該当する製品 "
+"<application>&PRODUCT;.</application> に対して Bugzilla: <ulink url=\"http://"
+"bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> "
+"に報告を提出してください。"
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"バグ報告を提出される場合は、そのドキュメントの識別子 <citetitle>&BOOKID;</citetitle> を "
-"忘れずに添えてください。"
+"バグ報告を提出される場合は、そのドキュメントの識別子 <citetitle>&BOOKID;</"
+"citetitle> を 忘れずに添えてください。"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"ドキュメントを改善する御提案をお持ちの場合は、 出来るだけ詳しく説明して頂くように "
-"お願いします。エラーを発見された場合は、そのセクション番号とその周辺の文章も含んで "
-"頂くと弊社でより迅速にその場所が発見できるようになります。"
+"ドキュメントを改善する御提案をお持ちの場合は、 出来るだけ詳しく説明して頂くよ"
+"うに お願いします。エラーを発見された場合は、そのセクション番号とその周辺の文"
+"章も含んで 頂くと弊社でより迅速にその場所が発見できるようになります。"
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "kiyoto james hashida, khashida@redhat.com, 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "kiyoto james hashida, khashida@redhat.com, 2007"
