--- a/publican-jboss/kn-IN/Code-Conventions.po
+++ b/publican-jboss/kn-IN/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-30 16:26+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
 "Language-Team: Kannada <en@li.org>\n"
@@ -13,37 +14,51 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "ಸಂಜ್ಞೆ ಪ್ರಸ್ತುತಿ ಒಡಂಬಡಿಕೆಗಳು"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
 msgstr ""
-"<xref linkend=\"sn-conventions\"/> ನಲ್ಲಿ ಒಳಗೊಂಡ ದಸ್ತಾವೇಜು ಒಡಬಂಡಿಕೆಗಳ ಜೊತೆಗೆ, ಆಕರ "
-"ಸಂಜ್ಞೆಗಳಿಗೆ ಸಂಬಂಧಿತವಾಗಿಯೆ ಚರ್ಚಿಸಲೆಂದು ಸೂಚಿತಗೊಂಡ ಹೆಚ್ಚುವರಿ ಒಡಂಬಡಿಕೆಗಳನ್ನು ಇಲ್ಲಿ ಕೊಡಲಾಗಿದೆ:"
+"<xref linkend=\"sn-conventions\"/> ನಲ್ಲಿ ಒಳಗೊಂಡ ದಸ್ತಾವೇಜು ಒಡಬಂಡಿಕೆಗಳ ಜೊತೆಗೆ, "
+"ಆಕರ ಸಂಜ್ಞೆಗಳಿಗೆ ಸಂಬಂಧಿತವಾಗಿಯೆ ಚರ್ಚಿಸಲೆಂದು ಸೂಚಿತಗೊಂಡ ಹೆಚ್ಚುವರಿ ಒಡಂಬಡಿಕೆಗಳನ್ನು "
+"ಇಲ್ಲಿ ಕೊಡಲಾಗಿದೆ:"
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "ವರ್ಗದ ಹೆಸರು"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
 msgstr ""
-"ಇದು ಒಂದು ಆಬ್ಜೆಕ್ಟ್ ಓರಿಯಂಟೆಡ್ (<firstterm>OO</firstterm>) ಪ್ರೊಗ್ರಾಮಿಂಗ್ ಭಾಷೆಯ ಒಂದು ವರ್ಗವಾಗಿದೆ. "
-"ಉದಾಹರಣೆಗೆ, ವರ್ಗ <classname>com.arsdigita.categorization.CategoryTreeNode</classname> ."
+"ಇದು ಒಂದು ಆಬ್ಜೆಕ್ಟ್ ಓರಿಯಂಟೆಡ್ (<firstterm>OO</firstterm>) ಪ್ರೊಗ್ರಾಮಿಂಗ್ ಭಾಷೆಯ ಒಂದು "
+"ವರ್ಗವಾಗಿದೆ. ಉದಾಹರಣೆಗೆ, ವರ್ಗ <classname>com.arsdigita.categorization."
+"CategoryTreeNode</classname> ."
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "ಕ್ರಮದ ಹೆಸರು"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
@@ -51,72 +66,127 @@ msgstr ""
 "ಇದು OO ಪ್ರೋಗ್ರಾಮಿಂಗ್ ಭಾಷೆಯಲ್ಲಿನ ಒಂದು ಕ್ರಮವಾಗಿದೆ, ಉದಾಹರಣೆಗೆ, ಕ್ರಮ "
 "<methodname>getBaseDataObjectType</methodname> ."
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "ಕ್ರಿಯೆ"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
-msgstr "ಒಂದು ಪ್ರೊಗ್ರಾಮಿಂಗ್ ಭಾಷೆಯಲ್ಲಿರುವಂತೆ, ಒಂದು ಕ್ರಿಯೆಯ ಅಥವ ಉಪವಾಡಿಕೆ(subroutine) ಹೆಸರು. ಉದಾಹರಣೆಗೆ, ಕ್ರಿಯೆ <function>SecurityLogger.warn()</function> ."
+msgstr ""
+"ಒಂದು ಪ್ರೊಗ್ರಾಮಿಂಗ್ ಭಾಷೆಯಲ್ಲಿರುವಂತೆ, ಒಂದು ಕ್ರಿಯೆಯ ಅಥವ ಉಪವಾಡಿಕೆ(subroutine) ಹೆಸರು. "
+"ಉದಾಹರಣೆಗೆ, ಕ್ರಿಯೆ <function>SecurityLogger.warn()</function> ."
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "ಚರಮೌಲ್ಯದ ಹೆಸರು"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
 msgstr ""
-"ಒಂದು ಚರಮೌಲ್ಯದ ಹೆಸರು. ಉದಾಹರಣೆಗೆ, ಚರಮೌಲ್ಯ "
-"<varname>BASE_DATA_OBJECT_TYPE</varname> ."
+"ಒಂದು ಚರಮೌಲ್ಯದ ಹೆಸರು. ಉದಾಹರಣೆಗೆ, ಚರಮೌಲ್ಯ <varname>BASE_DATA_OBJECT_TYPE</"
+"varname> ."
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "ಆಯ್ಕೆ"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
-msgstr "ಒಂದು ತಂತ್ರಾಂಶ ಆಜ್ಞೆಗಾಗಿನ ಅಥವ <methodname>Method</methodname> ಒಂದು ಆಯ್ಕೆ. ಉದಾಹರಣೆಗೆ, ಒಬ್ಬ ಳಕೆದಾರನಿಗೆ ಒಂದು ಆಬ್ಜೆಕಿಟಿನ ಮೇಲೆ <option>ಓದುವ</option> ಓದುವ ಸವಲತ್ತನ್ನು ಒದಗಿಸಲಾಗಿರುತ್ತದೆ."
+msgstr ""
+"ಒಂದು ತಂತ್ರಾಂಶ ಆಜ್ಞೆಗಾಗಿನ ಅಥವ <methodname>Method</methodname> ಒಂದು ಆಯ್ಕೆ. "
+"ಉದಾಹರಣೆಗೆ, ಒಬ್ಬ ಳಕೆದಾರನಿಗೆ ಒಂದು ಆಬ್ಜೆಕಿಟಿನ ಮೇಲೆ <option>ಓದುವ</option> ಓದುವ "
+"ಸವಲತ್ತನ್ನು ಒದಗಿಸಲಾಗಿರುತ್ತದೆ."
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "ಮರಳಿದ ಮೌಲ್ಯ"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
-msgstr "ಒಂದು ಕ್ರಿಯೆಯಿಂದ ಮರಳಿಸಲಾದ ಮೌಲ್ಯ. ಉದಾಹರಣೆಗೆ, ಒಂದು ಕ್ರಮವು <returnvalue>null</returnvalue> ಅನ್ನು ಮರಳಿಸುತ್ತದೆ ."
+msgstr ""
+"ಒಂದು ಕ್ರಿಯೆಯಿಂದ ಮರಳಿಸಲಾದ ಮೌಲ್ಯ. ಉದಾಹರಣೆಗೆ, ಒಂದು ಕ್ರಮವು <returnvalue>null</"
+"returnvalue> ಅನ್ನು ಮರಳಿಸುತ್ತದೆ ."
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "ಪ್ರೋಗ್ರಾಂನ ಪಟ್ಟಿ"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "ಒಂದು ಪ್ರೊಗ್ರಾಂನ ಎಲ್ಲಾ ಅಥವ ಒಂದು ಭಾಗದ ಅಕ್ಷರಶಃ ಪಟ್ಟಿ:"
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "ಪ್ರಥಮ ಪದ"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
 msgstr ""
-"ಒಂದು ಪದದ ಪ್ರಥಮ ಬಾರಿಯ ಬಳಕೆ, ಅಂದರೆ ಪ್ರಥಮ ಬಾರಿಗೆ<firstterm>bulletin-board</firstterm> "
-"ಅನ್ನು ನಾವು ಬಳಸಿದರೆ ಹಾಗು ಅದರ ಸಂಕ್ಷಿಪ್ತ ರೂಪವಾದ, <firstterm>bboard</firstterm> ಅನ್ನು ಸೂಚಿಸಲಾಗುತ್ತದೆ."
+"ಒಂದು ಪದದ ಪ್ರಥಮ ಬಾರಿಯ ಬಳಕೆ, ಅಂದರೆ ಪ್ರಥಮ ಬಾರಿಗೆ<firstterm>bulletin-board</"
+"firstterm> ಅನ್ನು ನಾವು ಬಳಸಿದರೆ ಹಾಗು ಅದರ ಸಂಕ್ಷಿಪ್ತ ರೂಪವಾದ, <firstterm>bboard</"
+"firstterm> ಅನ್ನು ಸೂಚಿಸಲಾಗುತ್ತದೆ."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "ಶಂಕರ್ ಪ್ರಸಾದ್ ಎಂ. ವಿ."
-
+#~ msgid "translator-credits"
+#~ msgstr "ಶಂಕರ್ ಪ್ರಸಾದ್ ಎಂ. ವಿ."
