--- a/publican-jboss/kn-IN/Feedback.po
+++ b/publican-jboss/kn-IN/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-30 17:06+0530\n"
 "Last-Translator: Shankar Prasad <svenkate@redhat.com>\n"
 "Language-Team: Kannada <en@li.org>\n"
@@ -13,19 +14,27 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms:  nplurals=2; plural=(n != 1);\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "ನಮಗೆ ನಿಮ್ಮ ಫೀಡ್-ಬ್ಯಾಕಿನ ಬೇಕಿದೆ!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
 msgstr "ಫೀಡ್-ಬ್ಯಾಕ್"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "ಈ ಕೈಪಿಡಿಗಾಗಿ ಸಂಪರ್ಕ ಮಾಹಿತಿ"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
@@ -33,31 +42,35 @@ msgid ""
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"ಈ ಕೈಪಿಡಿಯಲ್ಲಿ ನಿಮಗೆ ಬೆರಳಚ್ಚು ದೋಷ ಕಂಡು ಬಂದರೆ, ಅಥವ ಈ ಕೈಪಿಡಿಯನ್ನು ಇನ್ನಷ್ಟು ಉತ್ತಮಗೊಳಿಸಲು "
-"ನಿಮ್ಮಲ್ಲಿ ಸಲಹೆಗಳಿದ್ದರೆ, ನಾವು ಅದನ್ನು ತಿಳಿಯಲು ಉತ್ಸುಕರಾಗಿದ್ದೇವೆ! ದಯವಿಟ್ಟು ಬಗ್-ಝಿಲ್ಲಾದಲ್ಲಿ : <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> "
-"ನಲ್ಲಿನ <application>&PRODUCT;.</application> ನಲ್ಲಿ ಒಂದು ವರದಿಯನ್ನು ಸಲ್ಲಿಸಿ."
+"ಈ ಕೈಪಿಡಿಯಲ್ಲಿ ನಿಮಗೆ ಬೆರಳಚ್ಚು ದೋಷ ಕಂಡು ಬಂದರೆ, ಅಥವ ಈ ಕೈಪಿಡಿಯನ್ನು ಇನ್ನಷ್ಟು "
+"ಉತ್ತಮಗೊಳಿಸಲು ನಿಮ್ಮಲ್ಲಿ ಸಲಹೆಗಳಿದ್ದರೆ, ನಾವು ಅದನ್ನು ತಿಳಿಯಲು ಉತ್ಸುಕರಾಗಿದ್ದೇವೆ! ದಯವಿಟ್ಟು "
+"ಬಗ್-ಝಿಲ್ಲಾದಲ್ಲಿ : <ulink url=\"http://bugzilla.redhat.com/bugzilla/\">http://"
+"bugzilla.redhat.com/bugzilla/</ulink> ನಲ್ಲಿನ <application>&PRODUCT;.</"
+"application> ನಲ್ಲಿ ಒಂದು ವರದಿಯನ್ನು ಸಲ್ಲಿಸಿ."
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"ಒಂದು ದೋಷ ವರದಿಯನ್ನು ಸಲ್ಲಿಸುವಾಗ, ಕೈಪಿಡಿಯ ಈ ಕೆಳಗಿನ ಐಡೆಂಟಿಫಯರನ್ನು ನಮೂದಿಸುವುದನ್ನು ಮರೆಯಬೇಡಿ: "
-"<citetitle>&BOOKID;</citetitle>"
+"ಒಂದು ದೋಷ ವರದಿಯನ್ನು ಸಲ್ಲಿಸುವಾಗ, ಕೈಪಿಡಿಯ ಈ ಕೆಳಗಿನ ಐಡೆಂಟಿಫಯರನ್ನು ನಮೂದಿಸುವುದನ್ನು "
+"ಮರೆಯಬೇಡಿ: <citetitle>&BOOKID;</citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"ದಸ್ತಾವೇಜನ್ನು ಉತ್ತಮಗೊಳಿಸುವ ಬಗ್ಗೆ ನೀವು ಸಲಹೆ ನೀಡುವಂತಿದ್ದರೆ, ಅದನ್ನು ವಿವರಿಸುವಾಗ ಆದಷ್ಟು ಮಟ್ಟಿಗೆ "
-"ನಿರ್ದಿಷ್ಟವಾಗಿರಲಿ. ನಿಮಗೆ ಒಂದು ದೋಷ ಕಂಡು ಬಂದಲ್ಲಿ, ದಯವಿಟ್ಟು ನಮಗೆ ಅದನ್ನು ಪತ್ತೆ ಹಚ್ಚಲು ಸುಲಭವಾಗುವಂತೆ "
-"ಅಧ್ಯಾಯದ ಸಂಖ್ಯೆಯನ್ನು ಹಾಗು ಅದರ ಸುತ್ತಮುತ್ತಲಿರುವ ಒಂದಿಷ್ಟು ಪಠ್ಯವನ್ನು ನಮೂದಿಸಿ."
+"ದಸ್ತಾವೇಜನ್ನು ಉತ್ತಮಗೊಳಿಸುವ ಬಗ್ಗೆ ನೀವು ಸಲಹೆ ನೀಡುವಂತಿದ್ದರೆ, ಅದನ್ನು ವಿವರಿಸುವಾಗ ಆದಷ್ಟು "
+"ಮಟ್ಟಿಗೆ ನಿರ್ದಿಷ್ಟವಾಗಿರಲಿ. ನಿಮಗೆ ಒಂದು ದೋಷ ಕಂಡು ಬಂದಲ್ಲಿ, ದಯವಿಟ್ಟು ನಮಗೆ ಅದನ್ನು ಪತ್ತೆ "
+"ಹಚ್ಚಲು ಸುಲಭವಾಗುವಂತೆ ಅಧ್ಯಾಯದ ಸಂಖ್ಯೆಯನ್ನು ಹಾಗು ಅದರ ಸುತ್ತಮುತ್ತಲಿರುವ ಒಂದಿಷ್ಟು ಪಠ್ಯವನ್ನು "
+"ನಮೂದಿಸಿ."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "ಶಂಕರ್ ಪ್ರಸಾದ್ ಎಂ. ವಿ."
-
+#~ msgid "translator-credits"
+#~ msgstr "ಶಂಕರ್ ಪ್ರಸಾದ್ ಎಂ. ವಿ."
