--- a/publican-jboss/pt-BR/Feedback.po
+++ b/publican-jboss/pt-BR/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-23 14:26+1000\n"
 "Last-Translator: Leticia de Lima <ldelima@redhat.com>\n"
 "Language-Team: Brazilian Portuguese <en@li.org>\n"
@@ -12,19 +13,27 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "Nós precisamos de seu comentário"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
 msgstr "comentário"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "contato de informação para este manual"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
@@ -32,25 +41,35 @@ msgid ""
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla.redhat.com/ "
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> contra o produto <application>&PRODUCT;.</application>."
+"Se você encontrar erro ortográfico neste manual, ou se você tem uma sugestão "
+"para melhoramento deste manual, nós gostaríamos muito de ouvir sua opinião! "
+"Por favor submita um relatório em Bugzilla:<ulink url=\"http://bugzilla."
+"redhat.com/ bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> contra "
+"o produto <application>&PRODUCT;.</application>."
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
-msgstr "Uma vez submetendo um relatório de bug, por favor mencione a identificação do manual:<citetitle>&BOOKID;</citetitle>."
+msgstr ""
+"Uma vez submetendo um relatório de bug, por favor mencione a identificação "
+"do manual:<citetitle>&BOOKID;</citetitle>."
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
-msgstr "Se você tiver uma sugestão para o melhoramento deste documento, por favor tente ser o mais específico possível em sua descrição. Caso você tenha encontrado um erro, por favor inclua o número da seção e alguns detalhes a respeito do texto para a nossa melhor identificação."
+msgstr ""
+"Se você tiver uma sugestão para o melhoramento deste documento, por favor "
+"tente ser o mais específico possível em sua descrição. Caso você tenha "
+"encontrado um erro, por favor inclua o número da seção e alguns detalhes a "
+"respeito do texto para a nossa melhor identificação."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "créditos do tradutor"
-
+#~ msgid "translator-credits"
+#~ msgstr "créditos do tradutor"
