--- a/publican-jboss/si-LK/Feedback.po
+++ b/publican-jboss/si-LK/Feedback.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Feedback\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-30 15:16+0530\n"
 "Last-Translator: Danishka Navin <snavin@redhat.com>\n"
 "Language-Team: Sinhala <en@li.org>\n"
@@ -13,19 +14,27 @@ msgstr ""
 "X-Generator: KBabel 1.11.4\n"
 "Plural-Forms: nplurals=2; plural=(n != 1);\n"
 
-#: Feedback.xml:6(title)
+#. Tag: title
+#: Feedback.xml:6
+#, no-c-format
 msgid "We Need Feedback!"
 msgstr "අපට ප්‍රථිචාර අවශ්‍යයි!"
 
-#: Feedback.xml:8(primary)
+#. Tag: primary
+#: Feedback.xml:8
+#, no-c-format
 msgid "feedback"
 msgstr "ප්‍රථිචාරය"
 
-#: Feedback.xml:9(secondary)
+#. Tag: secondary
+#: Feedback.xml:9
+#, no-c-format
 msgid "contact information for this manual"
 msgstr "මෙම අත්පොත සඳහා සම්බන්ධතා තොරතුරු"
 
-#: Feedback.xml:11(para)
+#. Tag: para
+#: Feedback.xml:11
+#, no-c-format
 msgid ""
 "If you find a typographical error in this manual, or if you have thought of "
 "a way to make this manual better, we would love to hear from you! Please "
@@ -33,31 +42,33 @@ msgid ""
 "bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink> against the product "
 "<application>&PRODUCT;.</application>"
 msgstr ""
-"මෙම අත්පොතේ මුද්‍රණ දෝෂයක් ඔබට හමුවුවහොත් හෝ මෙම අත්පොත් වඩා ගුණාත්මක ලෙස "
-"සැකසීමට අදහසක් ඇතිවුවහොත් ඔබගේ අදහස් සදාරයෙන් පිළිගන්නෙමු! කරුණාකර Bugzilla තුළ වාර්තාවක් ලබාදෙන්න: <application>&PRODUCT;.</application> වෙනුවෙන් <ulink url=\"http://bugzilla.redhat.com/"
-"bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>"
+"මෙම අත්පොතේ මුද්‍රණ දෝෂයක් ඔබට හමුවුවහොත් හෝ මෙම අත්පොත් වඩා ගුණාත්මක ලෙස සැකසීමට අදහසක් "
+"ඇතිවුවහොත් ඔබගේ අදහස් සදාරයෙන් පිළිගන්නෙමු! කරුණාකර Bugzilla තුළ වාර්තාවක් ලබාදෙන්න: "
+"<application>&PRODUCT;.</application> වෙනුවෙන් <ulink url=\"http://bugzilla."
+"redhat.com/bugzilla/\">http://bugzilla.redhat.com/bugzilla/</ulink>"
 
-#: Feedback.xml:16(para)
+#. Tag: para
+#: Feedback.xml:16
+#, no-c-format
 msgid ""
 "When submitting a bug report, be sure to mention the manual's identifier: "
 "<citetitle>&BOOKID;</citetitle>"
 msgstr ""
-"දෝෂ වාර්තාවක් ලබාදිමේදි අත්පොත් හදුනාගැනීම සඳහන් කිරීමට සැළකිළිමත් වන්න: "
-"<citetitle>&BOOKID;</citetitle>"
+"දෝෂ වාර්තාවක් ලබාදිමේදි අත්පොත් හදුනාගැනීම සඳහන් කිරීමට සැළකිළිමත් වන්න: <citetitle>&BOOKID;"
+"</citetitle>"
 
-#: Feedback.xml:20(para)
+#. Tag: para
+#: Feedback.xml:20
+#, no-c-format
 msgid ""
 "If you have a suggestion for improving the documentation, try to be as "
 "specific as possible when describing it. If you have found an error, please "
 "include the section number and some of the surrounding text so we can find "
 "it easily."
 msgstr ""
-"මෙම ප්‍රලේඛනය දියුණු කිරීම සඳහා ඔබට යෝජනා ඇත්නම් එය විස්තර කිරීමෙදි හැකිතරම් විශේෂිතව "
-"දැක්වීමට උත්සාහ කරන්න. ඔබට දෝෂයක් හමුවුවහොත් කරුණාකර අංශයේ අංකය සහ අදාලා පෙදෙසේ වචන "
-"ස්වල්පයක් එක්කරන්න, එවිට අපහට එය පහසුවෙන් හදුනා ගත හැක."
+"මෙම ප්‍රලේඛනය දියුණු කිරීම සඳහා ඔබට යෝජනා ඇත්නම් එය විස්තර කිරීමෙදි හැකිතරම් විශේෂිතව දැක්වීමට "
+"උත්සාහ කරන්න. ඔබට දෝෂයක් හමුවුවහොත් කරුණාකර අංශයේ අංකය සහ අදාලා පෙදෙසේ වචන ස්වල්පයක් "
+"එක්කරන්න, එවිට අපහට එය පහසුවෙන් හදුනා ගත හැක."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Feedback.xml:0(None)
-msgid "translator-credits"
-msgstr "Danishka Navin"
-
+#~ msgid "translator-credits"
+#~ msgstr "Danishka Navin"
