--- a/publican-jboss/te-IN/Code-Conventions.po
+++ b/publican-jboss/te-IN/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-29 16:03+0530\n"
 "Last-Translator: Krishna Babu K <kkrothap@redhat.com>\n"
 "Language-Team: Telugu <en@li.org>\n"
@@ -12,35 +13,50 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "కోడ్ సమర్పణా విధానాలు"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
-msgstr "<xref linkend=\"sn-conventions\"/> లో ఉన్నటువంటి ప్రామాణిక పత్ర సంభంద విధానాలకు అదనంగా,ప్రత్యేకంగా సోర్సు కోడ్ సంబందించి మరికొన్ని అదనపు విధానాలు ఉన్నాయి."
+msgstr ""
+"<xref linkend=\"sn-conventions\"/> లో ఉన్నటువంటి ప్రామాణిక పత్ర సంభంద విధానాలకు అదనంగా,"
+"ప్రత్యేకంగా సోర్సు కోడ్ సంబందించి మరికొన్ని అదనపు విధానాలు ఉన్నాయి."
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "తరగతినామము"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
 msgstr ""
 "ఇది ఆబ్జక్టు-ఓరియంటెడ్ ప్రోగ్రామింగ్ లాగ్వేజ్ లో (<firstterm>OO</firstterm>) తరగతి నామము. "
-"ఉదాహరణకు,తరగతి<classname>com.arsdigita.categorization.CategoryTreeNode</classname>."
+"ఉదాహరణకు,తరగతి<classname>com.arsdigita.categorization.CategoryTreeNode</"
+"classname>."
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "పద్దతి నామము"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
@@ -48,11 +64,15 @@ msgstr ""
 "ఇది ఆబ్జక్టు-ఓరియంటెడ్ ప్రోగ్రామింగ్ లాగ్వేజ్ లో పద్దతి నామము. ఉదాహరణకు,పద్దతి "
 "<methodname>getBaseDataObjectType</methodname> ."
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "కార్యము"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
@@ -60,60 +80,107 @@ msgstr ""
 "కార్యము లేదా సబ్రొటీన్ నామము,ప్రోగ్రామింగ్ లాంగ్వేజ్ లో ఉన్నట్లుగా.ఉదాహరణకు,కార్యము "
 "<function>SecurityLogger.warn()</function> ."
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "వేరిబుల్ నామము"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
 msgstr "వేరిబుల్ నామము.ఉదాహరణకు,వేరిబుల్ <varname>BASE_DATA_OBJECT_TYPE</varname> ."
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "ఐచ్చికం"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
 msgstr ""
-"సాఫ్టువేర్ ఆదేశానికి లేదా <methodname>పద్దతి</methodname> కి ఒక ఐచ్చికం.ఉదాహరణకు, "
-"ఒక వినియోగదారుడు ఒక ఆబ్జక్టు పైన <option>read</option> అధికారం పొందాడు."
+"సాఫ్టువేర్ ఆదేశానికి లేదా <methodname>పద్దతి</methodname> కి ఒక ఐచ్చికం.ఉదాహరణకు, ఒక "
+"వినియోగదారుడు ఒక ఆబ్జక్టు పైన <option>read</option> అధికారం పొందాడు."
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "తిరిగివచ్చు విలువ"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
-msgstr "విలువ కార్యము నుండి తిరిగివచ్చినది.ఉదాహరణకు, ఒక పద్దతి <returnvalue>null</returnvalue> తిరిగిఇచ్చింది."
+msgstr ""
+"విలువ కార్యము నుండి తిరిగివచ్చినది.ఉదాహరణకు, ఒక పద్దతి <returnvalue>null</returnvalue> "
+"తిరిగిఇచ్చింది."
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "ప్రోగ్రామ్ జాబితా"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "ప్రోగ్రామ్ యొక్క అంతా లేదా కొంత బాగం అక్షరబద్ద జాబితా:"
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "మొదటి పదం"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
-msgstr "పదము వచ్చిన మొదటి సందర్బం,ఎటువంటిదంటే మొదటిసారి మనము పరిచయంచేసిన<firstterm>bulletin-board</firstterm>మరియు దాని సంక్షిప్త క్రమము,<firstterm>bulletin-board</firstterm>."
+msgstr ""
+"పదము వచ్చిన మొదటి సందర్బం,ఎటువంటిదంటే మొదటిసారి మనము పరిచయంచేసిన<firstterm>bulletin-board</"
+"firstterm>మరియు దాని సంక్షిప్త క్రమము,<firstterm>bulletin-board</firstterm>."
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "KrishnaBabu K <kkrothap@redhat.com> 2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "KrishnaBabu K <kkrothap@redhat.com> 2007"
