--- a/publican-jboss/zh-TW/Code-Conventions.po
+++ b/publican-jboss/zh-TW/Code-Conventions.po
@@ -3,7 +3,8 @@
 msgid ""
 msgstr ""
 "Project-Id-Version: Code-Conventions\n"
-"POT-Creation-Date: 2007-10-10 11:15+1000\n"
+"Report-Msgid-Bugs-To: http://bugs.kde.org\n"
+"POT-Creation-Date: 2008-07-04 06:19+0000\n"
 "PO-Revision-Date: 2007-10-23 16:20+1000\n"
 "Last-Translator: Terry Chuang <terry.chuang@redhat.com>\n"
 "Language-Team: Traditional Chinese <zh-TW@li.org>\n"
@@ -12,100 +13,174 @@ msgstr ""
 "Content-Transfer-Encoding: 8bit\n"
 "X-Generator: KBabel 1.11.4\n"
 
-#: Code-Conventions.xml:8(title)
+#. Tag: title
+#: Code-Conventions.xml:8
+#, no-c-format
 msgid "Code Presentation Conventions"
 msgstr "程式碼呈現常規"
 
-#: Code-Conventions.xml:10(para)
+#. Tag: para
+#: Code-Conventions.xml:10
+#, no-c-format
 msgid ""
 "In addition to the standard document conventions covered in <xref linkend="
 "\"sn-conventions\"/>, there are some additional conventions related "
 "specifically to discussing source code:"
-msgstr "除了涵蓋於 <xref linkend=\"sn-conventions\"/> 之中的標準文件常規之外，還有一些特別與討論原始程式碼相關的其它常規："
+msgstr ""
+"除了涵蓋於 <xref linkend=\"sn-conventions\"/> 之中的標準文件常規之外，還有一"
+"些特別與討論原始程式碼相關的其它常規："
 
-#: Code-Conventions.xml:19(classname)
+#. Tag: classname
+#: Code-Conventions.xml:19
+#, no-c-format
 msgid "classname"
 msgstr "classname（類別名稱）"
 
-#: Code-Conventions.xml:21(para)
+#. Tag: para
+#: Code-Conventions.xml:21
+#, no-c-format
 msgid ""
 "This is the name of a class in an object-oriented (<firstterm>OO</"
 "firstterm>) programming language. For example, the class <classname>com."
 "arsdigita.categorization.CategoryTreeNode</classname> ."
-msgstr "這是個物件導向（<firstterm>OO</firstterm>）的程式語言中的類別名稱。類別的範例例如 <classname>com.arsdigita.categorization.CategoryTreeNode</classname>。"
+msgstr ""
+"這是個物件導向（<firstterm>OO</firstterm>）的程式語言中的類別名稱。類別的範例"
+"例如 <classname>com.arsdigita.categorization.CategoryTreeNode</classname>。"
 
-#: Code-Conventions.xml:32(methodname)
+#. Tag: methodname
+#: Code-Conventions.xml:32
+#, no-c-format
 msgid "method name"
 msgstr "method name（方法名稱）"
 
-#: Code-Conventions.xml:34(para)
+#. Tag: para
+#: Code-Conventions.xml:34
+#, no-c-format
 msgid ""
 "This is the name of a method in an OO programming language, e.g. the method "
 "<methodname>getBaseDataObjectType</methodname> ."
-msgstr "這是個物件導向的程式語言中的方法之名稱。例如 <methodname>getBaseDataObjectType</methodname>。"
+msgstr ""
+"這是個物件導向的程式語言中的方法之名稱。例如 "
+"<methodname>getBaseDataObjectType</methodname>。"
 
-#: Code-Conventions.xml:44(function)
+#. Tag: function
+#: Code-Conventions.xml:44
+#, no-c-format
 msgid "function"
 msgstr "function（函式）"
 
-#: Code-Conventions.xml:46(para)
+#. Tag: para
+#: Code-Conventions.xml:46
+#, no-c-format
 msgid ""
 "The name of a function or subroutine, as in a programming language. For "
 "example, the function <function>SecurityLogger.warn()</function> ."
-msgstr "（就程式設計語言來講）這代表函式或副程式的名稱。函式範例例如 <function>SecurityLogger.warn()</function>。"
+msgstr ""
+"（就程式設計語言來講）這代表函式或副程式的名稱。函式範例例如 "
+"<function>SecurityLogger.warn()</function>。"
 
-#: Code-Conventions.xml:56(varname)
+#. Tag: varname
+#: Code-Conventions.xml:56
+#, no-c-format
 msgid "variable name"
 msgstr "variable name（變數名稱）"
 
-#: Code-Conventions.xml:58(para)
+#. Tag: para
+#: Code-Conventions.xml:58
+#, no-c-format
 msgid ""
 "The name of a variable. For example, the variable "
 "<varname>BASE_DATA_OBJECT_TYPE</varname> ."
 msgstr "變數之名稱。例如 <varname>BASE_DATA_OBJECT_TYPE</varname>。"
 
-#: Code-Conventions.xml:67(option)
+#. Tag: option
+#: Code-Conventions.xml:67
+#, no-c-format
 msgid "option"
 msgstr "option（選項）"
 
-#: Code-Conventions.xml:69(para)
+#. Tag: para
+#: Code-Conventions.xml:69
+#, no-c-format
 msgid ""
 "An option for a software command or <methodname>Method</methodname> . For "
 "example, a user has been granted <option>read</option> privileges on an "
 "object."
-msgstr "代表軟體指令或是 <methodname>Method</methodname> 的選項。比方說，有位用戶被授予了某個物件上的 <option>read</option>（讀取）權限。"
+msgstr ""
+"代表軟體指令或是 <methodname>Method</methodname> 的選項。比方說，有位用戶被授"
+"予了某個物件上的 <option>read</option>（讀取）權限。"
 
-#: Code-Conventions.xml:79(returnvalue)
+#. Tag: returnvalue
+#: Code-Conventions.xml:79
+#, no-c-format
 msgid "return value"
 msgstr "return value（傳回值）"
 
-#: Code-Conventions.xml:81(para)
+#. Tag: para
+#: Code-Conventions.xml:81
+#, no-c-format
 msgid ""
 "The value returned by a function. For example, a method returns "
 "<returnvalue>null</returnvalue> ."
-msgstr "代表函式所回傳的值。比方說，一則 method 回傳了 <returnvalue>null</returnvalue>。"
+msgstr ""
+"代表函式所回傳的值。比方說，一則 method 回傳了 <returnvalue>null</"
+"returnvalue>。"
 
-#: Code-Conventions.xml:90(term)
+#. Tag: term
+#: Code-Conventions.xml:90
+#, no-c-format
 msgid "program listing"
 msgstr "program listing（程式列表）"
 
-#: Code-Conventions.xml:92(para)
+#. Tag: para
+#: Code-Conventions.xml:92
+#, no-c-format
 msgid "A literal listing of all or part of a program:"
 msgstr "一個含有所有或部份程式的常值清單："
 
-#: Code-Conventions.xml:121(term)
+#. Tag: programlisting
+#: Code-Conventions.xml:95
+#, no-c-format
+msgid ""
+"<![CDATA[\n"
+"extern void sem_exit (void);\n"
+"extern struct task_struct *child_reaper;\n"
+" \n"
+"int getrusage(struct task_struct *, int, struct rusage *);\n"
+" \n"
+"static void __unhash_process(struct task_struct *p)\n"
+"{\n"
+"        nr_threads--;\n"
+"        detach_pid(p, PIDTYPE_PID);\n"
+"        detach_pid(p, PIDTYPE_TGID);\n"
+"        if (thread_group_leader(p)) {\n"
+"                detach_pid(p, PIDTYPE_PGID);\n"
+"                detach_pid(p, PIDTYPE_SID);\n"
+"        }\n"
+" \n"
+"        REMOVE_LINKS(p);\n"
+"        p->pid = 0;\n"
+"}\n"
+"]]>"
+msgstr ""
+
+#. Tag: term
+#: Code-Conventions.xml:100
+#, no-c-format
 msgid "first term"
 msgstr "first term"
 
-#: Code-Conventions.xml:123(para)
+#. Tag: para
+#: Code-Conventions.xml:102
+#, no-c-format
 msgid ""
 "The first occurrence of a term, such as the first time we introduce a "
 "<firstterm>bulletin-board</firstterm> and note its abbreviated form, "
 "<firstterm>bboard</firstterm>."
-msgstr "代表某個詞彙的第一次出現，比方說當我們第一次介紹 <firstterm>bulletin-board（資訊安全佈告欄區）</firstterm>以及它的縮寫 <firstterm>bboard</firstterm> 時便會使用到。"
+msgstr ""
+"代表某個詞彙的第一次出現，比方說當我們第一次介紹 <firstterm>bulletin-board"
+"（資訊安全佈告欄區）</firstterm>以及它的縮寫 <firstterm>bboard</firstterm> 時"
+"便會使用到。"
 
-#. Put one translator per line, in the form of NAME <EMAIL>, YEAR1, YEAR2.
-#: Code-Conventions.xml:0(None)
-msgid "translator-credits"
-msgstr "譯者姓名︰莊佳儒（Terry Chuang）2007"
-
+#~ msgid "translator-credits"
+#~ msgstr "譯者姓名︰莊佳儒（Terry Chuang）2007"
